--- a/web.html
+++ b/web.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -62,44 +63,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var brand_swiper = new Swiper(".brand_swiper", {
-                slidesPerView: 4,
-                spaceBetween: 20,
-                loop: true,
-                autoplay: true,
-                navigation: {
-                    nextEl: ".swiper-button-next",
-                    prevEl: ".swiper-button-prev",
-                },
-                pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true,
-                },
-                grabCursor: true,
-                touchEventsTarget: "wrapper",
-                simulateTouch: true,
-                touchRatio: 1,
-                touchAngle: 45,
-                breakpoints: {
-                    320: { slidesPerView: 2, spaceBetween: 10 },
-                    640: { slidesPerView: 3, spaceBetween: 15 },
-                    1024: { slidesPerView: 4, spaceBetween: 20 },
-                }
-            });
-            var menuToggle = document.querySelector(".menu-toggle");
-            var navigationUl = document.querySelector(".navigation ul");
 
-            if (menuToggle && navigationUl) {
-                menuToggle.addEventListener("click", function () {
-                    navigationUl.classList.toggle("active");
-                });
-            } else {
-                console.error("Menu toggle or navigation ul not found");
-            }
-        });
-    </script>
+    
 
 </body>
 
