--- a/web.html
+++ b/web.html
@@ -57,15 +57,100 @@
         </section>
         <section class="special_anime container section">
             <h2 class="section_title">Special For You</h2>
+            <div class="swiper anime_swiper">
+                <div class="swiper-wrapper">
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-1.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Pop manga mermaids</h3>
+                            <span class="anime-detail">2019,Adventure</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-2.png" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">HUNTER X HUNTER</h3>
+                                <span class="anime-detail">2011,Adventure</span>
+                                <p class="anime-rating">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-3.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Attack on Titan</h3>
+                            <span class="anime-detail">2013,Action, Dark Fantasy, and Post-Apocalyptic elements. </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-4.png" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">DRAGON BALL SUPER</h3>
+                            <span class="anime-detail">2016,Adventure,Fantasy and Action </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-5.0.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Chainsaw Man</h3>
+                            <span class="anime-detail">2022,dark fantasy, horror, and action </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-7.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Spirited Away</h3>
+                            <span class="anime-detail">2001,Animated fantasy film </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
         </section>
-
-
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    
-
 </body>
 
 </html>
