new most popular section

--- a/web.html
+++ b/web.html
@@ -149,6 +149,180 @@
                 <div class="swiper-button-prev"></div>
             </div>
         </section>
+        <section class="subscription" id="subscribe">
+            <div class="subscription_section grid1">
+                <img src="img/subscription.png" alt="" class="banner_img">
+                <div class="sub">
+                    <h1 class="CASHBACK">1-YEAR FREE SUBSCRIPTION AND CASHBACK UPTO 50%</h1>
+                    <p class="descrip">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, impedit
+                        corporis deserunt alias et dolor aperiam tempore magni eum libero minus officia enim? Minus.</p>
+                    <div class="btnn"><a href="#subscribe">Subscribe Now</a></div>
+                </div>
+            </div>
+        </section>
+        <section class="popular">
+            <h1 class="popular">Most Popular</h1>
+            <div class="swiper anime_swiper">
+                <div class="swiper-wrapper">
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-6.jpeg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Gun-x-Sword</h3>
+                            <span class="anime-detail">2005,Adventure,Action</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-8.png" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">One-peice</h3>
+                            <span class="anime-detail">1997,Adventure,Fantasy and Action</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-9.jpeg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Shinobi no itoki</h3>
+                            <span class="anime-detail">2022,Action. </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-10.jpeg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Tower of god</h3>
+                            <span class="anime-detail">2020, Action, Adventure, and Animation </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-11.jpeg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Boruto</h3>
+                            <span class="anime-detail">2017,Action,Adventure </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-12.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Naruto-Shipudden</h3>
+                            <span class="anime-detail">2007,Action,Adventure</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </section>
+        <section class="trending1.0">
+            <h1 class="trending1">Trending Now</h1>
+            <div class="swiper1 anime_swiper">
+                <div class="swiper-wrapper">
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-8.png" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">One-peice</h3>
+                            <span class="anime-detail">1997,Adventure,Fantasy and Action</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-4.png" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">DRAGON BALL SUPER</h3>
+                            <span class="anime-detail">2016,Adventure,Fantasy and Action </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-9.jpeg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Shinobi no itoki</h3>
+                            <span class="anime-detail">2022,Action. </span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="anime_item swiper-slide">
+                        <img src="img/anime-12.jpg" alt="" class="anime-img">
+                        <div class="anime-data">
+                            <h3 class="anime-title">Naruto-Shipudden</h3>
+                            <span class="anime-detail">2007,Action,Adventure</span>
+                            <p class="anime-rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </section>
+        <footer class="footer">
+            
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
